# finance-green-agent-base

./: .env.example  .gitignore  README.md  pyproject.toml
src/: analyst.py
src/finance_purple_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
